--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,8 @@
 		{
 			"matches": [
 				"*://*.audiobookbay.nl/audio-books/*"
+				"*://*.audiobookbay.ws/audio-books/*"
+				"*://*.audiobookbay.fi/audio-books/*"
 			],
 			"js": [
 				"abbma.js"
