Updating to mv3, adding other tlds

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,25 @@
 {
-	"manifest_version": 2,
-	"name": "AudioBookBay Magnet Assistant",
-	"description": "Creates magnet links for AudioBookBay pages without logging in.",
-	"version": "1.0.3",
-	"content_scripts": [
-		{
-			"matches": [
-				"*://*.audiobookbay.is/audio-books/*"
-			],
-			"js": [
-				"abbma.js"
-			]
-		}
-	]
+  "manifest_version": 3,
+  "name": "AudioBookBay Magnet Assistant",
+  "description": "Creates magnet links for AudioBookBay pages without logging in.",
+  "version": "2.0.0",
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*.audiobookbay.nl/abs/*",
+        "*://*.audiobookbay.is/abs/*",
+        "*://*.audiobookbay.se/abs/*"
+      ],
+      "js": [
+        "abbma.js"
+      ]
+    }
+  ],
+  "content_security_policy": {},
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{16ec1e5b-2ec8-4186-89fb-ca8f548d6178}",
+      "strict_min_version": "109.0"
+    }
+  }
 }
